crates/aven-check/tests/fixtures/check/invalid/pick-non-record.av
bad : {} = pick(42, @{"name"})
